--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout">
 
-    <TextView
+
+
+    <EditText
+        android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:id="@+id/bekeres"
+        android:layout_centerInParent="true"
+        android:textSize="25sp"/>
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Nagy betűs szöveg"
+        android:background="@color/purple_500"
+        android:layout_below="@+id/bekeres"
+        android:layout_centerInParent="true"
+        android:id="@+id/nagybetusGomb"
+        android:layout_marginTop="15sp"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Kis betős szöveg"
+        android:background="@color/purple_500"
+        android:layout_below="@+id/nagybetusGomb"
+        android:layout_centerInParent="true"
+        android:id="@+id/kisbetusGomb"
+        android:layout_marginTop="15sp"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Színváltás"
+        android:layout_below="@+id/kisbetusGomb"
+        android:layout_centerInParent="true"
+        android:id="@+id/szinvaltasGomb"
+        android:layout_marginTop="15sp"
+        android:background="@color/purple_500"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Teszt szöveg"
+        android:id="@+id/szinvaltosSzoveg"
+        android:layout_below="@+id/szinvaltasGomb"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android:layout_marginTop="15sp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
